fixed story username element overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -73,12 +73,15 @@ body {
 
 .storyelement {
     display: flex;
-    width: 70px;
+    width: 80px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top:10px;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 
 
